[package]
name = "sum_tree-gpui-standalone"
version = "1.8.2"
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"
edition = "2024"
repository = "https://github.com/zed-industries/zed"

[lib]
path = "src/sum_tree.rs"
doctest = false
name = "sum_tree"

[package.metadata.cargo-machete]
ignored = ["tracing"]

[features]
test-support = []
[dependencies]
heapless = "^0.9.2"
log = {version = "^0.4.16", features = ["kv_unstable_serde", "serde"]}
rayon = "^1.8"
tracing = "^0.1.40"
